# aya

./: Cargo.toml
aya-arena-common/: BENCHMARKS.md  Cargo.toml  README.md
aya-arena-common/src/: lib.rs
aya-build/: Cargo.toml
aya-build/src/: lib.rs
aya-core-postprocessor/: Cargo.toml  DESIGN.txt  example-relos.toml
aya-core-postprocessor/src/: btf_ext_writer.rs  btf_parser.rs  elf_patcher.rs  insn_scanner.rs  lib.rs  main.rs  marker_parser.rs  sidecar.rs  test_helpers.rs
aya-core-relo-macro/: Cargo.toml
aya-core-relo-macro/src/: lib.rs
aya-obj/src/: maps.rs  obj.rs  relocation.rs
aya-obj/src/btf/: btf.rs  relocation.rs  types.rs
aya/src/: bpf.rs  util.rs
aya/src/maps/: arena.rs  cgrp_storage.rs  mod.rs
aya/src/programs/: links.rs  mod.rs  struct_ops.rs  syscall.rs  uprobe.rs
aya/src/sys/: bpf.rs  perf_event.rs
ebpf/aya-ebpf/src/: lib.rs
ebpf/aya-ebpf/src/kfuncs/: arena.rs  bump.rs  global_alloc.rs  mod.rs
ebpf/aya-ebpf/src/maps/: cgrp_storage.rs  mod.rs
test/arena-bench/: Cargo.toml
test/arena-bench/src/: main.rs
test/arena-poc/: Cargo.toml
test/arena-poc/src/: main.rs
test/arena-vanilla-poc/: Cargo.toml
test/arena-vanilla-poc/src/: main.rs
test/integration-ebpf/: Cargo.toml
test/integration-ebpf/src/: arena_btree_test.rs  arena_cross_test.rs  arena_hashmap_test.rs  arena_slab_test.rs  arena_test.rs  arena_vanilla_test.rs
test/integration-test/: Cargo.toml
test/integration-test/src/: lib.rs  tests.rs
test/integration-test/src/tests/: arena.rs
