[package]
name = "aya-core-postprocessor"
version = "0.1.0"
edition = "2024"
description = "Post-processor that adds CO-RE relocation records to BPF ELF objects"

authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aya-core-postprocessor"
path = "src/main.rs"

[lib]
name = "aya_core_postprocessor"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive", "std"] }
object = { workspace = true, features = ["elf", "read", "write"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true, default-features = true }
