[package]
name = "aya-core-postprocessor"
version = "0.1.0"
edition = "2024"
description = "Post-processor that adds CO-RE relocation records to BPF ELF objects"

authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aya-core-postprocessor"
path = "src/main.rs"

[lib]
name = "aya_core_postprocessor"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
object = { workspace = true, features = ["elf", "read", "write"] }
serde = { version = "1", features = ["derive"] }

[dependencies.clap]
workspace = true
features = ["derive", "std"]
optional = true

[dependencies.toml]
version = "0.8"
optional = true

[features]
default = ["cli"]
cli = ["dep:clap", "dep:toml"]

[dev-dependencies]
tempfile = { workspace = true, default-features = true }
